[package]
name = "cartorio"
description = "todo"
version = "0.1.0"
authors = ["Ciro S. Costa <cscosta@pivotal.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

clap = "2.0"
futures = "0.1.25"
futures-fs = "0.0.5"
hex = "0.3"
hyper = "0.12"
serde_json = "1.0"
sha2 = "0.8"
tar = "0.4"
tempfile = "3.0"
